# testdrivenflask

./: .gitignore  .pre-commit-config.yaml  Pipfile  app.py  config.py  pyproject.toml  requirements.txt  test_app.py
.github/ISSUE_TEMPLATE/: failed-tests.md
flask-stock-portfolio-code/: .pre-commit-config.yaml  app.py
migrations/: env.py
migrations/versions/: 2d745aa375b8_added_email_confirmation_to_users.py  4063eef7fb44_another_redo.py  66bd9d73840a_adding_api_fields.py  7c917b52fb60_re_do.py  b91e295482dd_rebuilding_again.py  e1375a0c0990_linking_user_and_stock_tables.py  e594c064bec1_add_stocks_table.py  f638e40264fe_add_users_table.py
project/: __init__.py  models.py
project/static/css/: user_profile_style.css
project/stocks/: __init__.py  routes.py
project/stocks/templates/stocks/: add_stock.html  chartjs_demo1.html  chartjs_demo2.html  chartjs_demo3.html  index.html  stocks.html
project/templates/: 403.html  404.html  405.html  base.html
project/users/: __init__.py  forms.py  routes.py
project/users/templates/: register.html
project/users/templates/users/: about.html  change_password.html  email_confirmation.html  email_password_reset.html  login.html  password_reset_via_email.html  profile.html  register.html  reset_password_with_token.html
templates/: about.html  add_stock.html  base.html  index.html  stocks.html
tests/: conftest.py
tests/functional/: test_stocks.py  test_users.py
tests/unit/: test_app.py  test_models.py
