[tool.poetry]
name = "flask-stock-portfolio-code"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
ipython = "^7.18.1"
prettyprinter = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-emoji = "^0.2.0"
pytest-picked = "^0.4.4"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
