[tool.poetry]
name = "flask-stock-portfolio-code"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
ipython = "^7.18.1"
prettyprinter = "^0.18.0"
flask-sqlalchemy = "^2.4.4"
flask-shell-ipython = "^0.4.1"
flask-migrate = "^2.5.3"
rich = "^7.0.0"
flask-bcrypt = "^0.7.1"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-emoji = "^0.2.0"
pytest-picked = "^0.4.4"
pre-commit = "^2.7.1"
coverage = "^5.3"
pytest-cov = "^2.10.1"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
